# magic_func

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cc  benchmark_functions.cc  delegate.h
examples/: CMakeLists.txt  README.md
examples/generic_event_queue/: cpp14_helpers.h  event_tuple_extractor.h  generic_event_queue.cc  generic_event_queue.h  generic_event_queue_unittest.cc  main.cc  selective_decay.h
include/magic_func/: allocator.h  error.h  function.h  function.hpp  function_cast.h  function_traits.h  make_function.h  member_function.h  member_function.hpp  port.h  type_erased_function.h  type_erased_function.hpp  type_erased_object.h  type_erased_object.hpp  type_id.h  type_traits.h  version.h
test/: CMakeLists.txt  allocator_unittest.cc  function_cast_unittest.cc  function_traits_unittest.cc  function_unittest.cc  make_function_unittest.cc  member_function_unittest.cc  test_common.cc  test_common.h  type_erased_function_unittest.cc  type_erased_object_unittest.cc  type_traits_unittest.cc
